@@ -134,6 +134,7 @@
 {
 	// before creating any layer, set the landscape mode
 	[[Director sharedDirector] setLandscape: YES];
+	[[Director sharedDirector] setDisplayFPS:YES];
 
 	Scene *scene = [Scene node];
 
